test-suite/invalid/person-invalid-version.glx
# TEST: person-invalid-version
# EXPECT: invalid
# ERROR: "version must match pattern"
# DESCRIPTION: Version must be in major.minor format

id: person-g7h8i9j0
version: "1"  # Invalid: missing minor version
type: person
name:
  given: John
  surname: Smith
  display: John Smith
